# krunner-ssh

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
src/: CMakeLists.txt  sshdiscovery.cpp  sshdiscovery.h  sshhelper.cpp  sshhelper.h  sshhelper.json  sshhelper_common.cpp  sshhelper_common.h
src/kcms/: entriesmodel.cpp  entriesmodel.h  manualentrydialog.cpp  manualentrydialog.h  sshhelperkcm.cpp  sshhelperkcm.h
